--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "tsc -b && vite build",
+    "filecopy": "node -e \"require('fs').copyFileSync('./dist/index.html', './dist/404.html')\"",
+    "build": "tsc -b && vite build && npm run filecopy",
     "lint": "eslint .",
     "preview": "vite preview",
     "deploy": "npm run build && gh-pages -d dist -m \"Updates --skip-ci\""
